--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,13 +2,22 @@
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 40%
-    right: 50%
+    top: 34%
+    right: 13%
+    width: 20%
   &-2
-    animation: float1 2.8s ease-in-out infinite alternate
+    animation: scale 2.8s ease-in-out infinite alternate
     position: absolute
-    top: 51%
-    right: 30%
+    top: 64%
+    right: 17%
+    width: 20%
+
+  &-3
+    animation: float2 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 10%
+    right: 16%
+
 
 
 @keyframes float1
@@ -17,3 +26,330 @@
 
   100%
     transform: translateY(0px)
+
+@keyframes float2
+  0%
+    transform: translateX(20px)
+
+  100%
+    transform: translateX(0px)
+
+@keyframes scale
+  0%
+    transform: scale(1)
+
+  100%
+    transform: scale(1.2)
+
+.banner-principal__img 
+    padding-top: 0rem !important
+    padding-bottom: 0rem !important
+    margin-left: -14%
+    width: 41.5%
+    margin-top: -7px
+
+/////////banner/////
+
+.banner-principal__descripcion 
+    margin-right: 100px
+
+.banner-interno__fondo
+  background-image: url("../assets/curso/portada/banner-interno.png") !important
+
+  ////////////////tarjetas
+
+.tarjeta--rosa
+  background-color: #FFE4E5
+
+.tarjeta--rosa1
+  background-color: #FEB7B9
+
+.cajon.color-primario 
+    background-color: #FED2D3
+
+.img-fondo
+  background-image: url('../assets/curso/temas/tema1/fondo-tarjeta.png')    
+  background-repeat: no-repeat
+  background-size: cover
+  background-position: center 
+  border-radius: 20px !important
+  margin-bottom: -5px
+  margin-top: -5px
+
+.pasos-b__header__btn--left, .pasos-b__header__btn--right
+    min-width: 50px;
+    max-width: 50px;
+    min-height: 50px;
+    max-height: 50px;
+    flex: auto;
+    border-radius: 50%;
+    border: 2px solid #cccccc
+    background-color: #FECA2E
+    position: relative;
+    cursor: pointer;
+    transition: border-color 0.2s ease-in-out
+    top: 22rem
+@media (max-width: 500px)
+  .pasos-b__header__btn--left, .pasos-b__header__btn--right
+      top: 0rem
+
+
+.pasos-b.color-acento-contenido .pasos-b__header__item--active .pasos-b__header__item__dot 
+    border-color: #cccccc
+    background-color: #FECA2E
+
+.pasos-b__header__item--before .pasos-b__header__item__dot 
+    border-color: #cccccc
+    background-color: #cccccc00
+
+.pasos-b__header__item--before .pasos-b__header__item__line-container:after 
+    background-color: #cccccc
+
+.pasos-b__header__item--active .pasos-b__header__item__line-container:before 
+    background-color: #cccccc
+
+.pasos-b__header__item--before .pasos-b__header__item__line-container:before, .pasos-b__header__item--before .pasos-b__header__item__line-container:after
+    background-color: #cccccc
+
+.pasosb2
+  .pasos-b__header__btn--left, .pasos-b__header__btn--right
+    min-width: 50px;
+    max-width: 50px;
+    min-height: 50px;
+    max-height: 50px;
+    flex: auto;
+    border-radius: 50%;
+    border: 2px solid #cccccc
+    background-color: #FECA2E
+    position: relative;
+    cursor: pointer;
+    transition: border-color 0.2s ease-in-out
+    top: 25rem
+@media (max-width: 500px)
+  .pasosb2
+    .pasos-b__header__btn--left, .pasos-b__header__btn--right
+      min-width: 50px;
+      max-width: 50px;
+      min-height: 50px;
+      max-height: 50px;
+      flex: auto;
+      border-radius: 50%;
+      border: 2px solid #cccccc
+      background-color: #FECA2E
+      position: relative;
+      cursor: pointer;
+      transition: border-color 0.2s ease-in-out
+      top: 0rem
+
+.tarjeta-animada
+  width: 350px
+  height: 185px
+@media (max-width: 500px)
+  .tarjeta-animada
+      width: 370px
+      height: 220px
+
+.tarjeta-animada2
+  width: 420px
+  height: 220px
+@media (max-width: 500px)
+  .tarjeta-animada
+      width: 370px
+      height: 220px
+
+.trj-numerada
+  width: 260px
+  height: 315px
+
+/////////pestañas verticales
+
+.tabs-a.color-acento-botones .tabs-a__tab__selected 
+    background-color: #A7E446
+    color: #12263F;
+
+
+.tabs-a.color-acento-botones .tabs-a__tab__selected:before 
+    background-color: #A7E446
+
+.tabs-a__tab 
+    display: block
+    width: 100%
+    text-align: left
+    background-color: #D2DBE5
+    padding: 15px 20px
+    border-radius: 5px
+    color: #111e61
+    line-height: 1.2em
+
+.tabs-a.color-acento-botones .tabs-a__tab:hover, .tabs-a.color-acento-botones .tabs-a__tab:active, .tabs-a.color-acento-botones .tabs-a__tab:focus
+    background-color: #A7E446
+    color: #12263F
+
+.acordion__accion__btn--a 
+    background-color: #A7E446
+
+
+//////////////viñeta
+
+.lista-ul li > i:first-of-type
+      font-size: 10px
+      color: #A7E446
+
+.lista-ul li
+      margin-bottom: -10px
+
+.lista-ul1 li > i:first-of-type
+      font-size: 16px
+      color: #FC4B52
+      margin-right: 10px
+
+
+.bloque-texto-b i 
+    font-size: 1.5em
+    color: #fc4b52
+.bloque-texto-b__texto 
+    display: flex
+
+
+////////////////imagenes 
+
+.img10-tema1
+    position: relative
+    bottom: 30px
+@media (max-width: 500px)
+  .img10-tema1 
+    bottom: 0px
+
+.img11-tema1
+    position: relative
+    bottom: 50px
+@media (max-width: 500px)
+  .img11-tema1 
+    bottom: 0px
+
+.img6-t2
+    position: relative !important
+    width: 245% !important
+    right: 130% !important
+    max-width: 400% !important
+@media (max-width: 500px)
+  .img6-t2
+      position: relative !important
+      width: 256% !important
+      left: 250px!important
+      max-width: 300% !important
+      bottom: 85px
+
+.img8-t2
+    width: 120%
+    right: 38px
+    position: relative
+    max-width: 150%
+
+.img14-t2
+  width: 70%
+@media (max-width: 500px)
+  .img14-t2
+      width: 100%
+
+.img4-t3
+    width: 80%
+    position: relative
+    left: 22%
+
+
+
+////////////colores
+
+.color-rosa
+  background-color: #FFE4E5
+
+.color-rosa1
+  background-color: #FEB7B9
+
+.color-verde
+  background-color: #DCF4B5
+
+//////////tarjetas
+
+.tarjeta--rosa1
+  background-color: #FFE4E5
+
+.tarjeta--rosa2
+  background-color: #FEC8CA
+
+.texto-tarjeta
+    left: -10%
+    position: relative
+@media (max-width: 500px)
+  .texto-tarjeta
+      left: 0%
+      position: relative
+
+.img-2-3-4
+    position: relative
+    left: -60%
+    top: 25px
+@media (max-width: 500px)
+  .img-2-3-4
+    position: relative
+    left: 0%
+    top: 0px
+
+//////////acordeon 
+
+.tarjeta.acordeonA
+  background-color: #f1dfdf
+
+.acordion__accion__btn--b
+  border: 1px solid #a7e446 !important
+  background-color: #a7e446 !important
+
+.acordion__activo
+  background-color: #FFF7E0!important
+
+
+.bloque-texto-g__img
+    width: 60%
+    position: absolute
+    top: 0
+    left: 417px
+    bottom: 0
+    background-position: center
+    background-size: cover
+@media (max-width: 500px)
+  .bloque-texto-g__img
+      width: 100%
+      position: absolute
+      top: 0
+      left: 0px
+      bottom: 0
+      background-position: center
+      background-size: cover
+
+.bloque-texto-g__texto 
+    position: relative
+    width: 70%
+    background-color: rgba(255, 255, 255, 0.95)
+    right: 30%
+@media (max-width: 500px)
+
+  .bloque-texto-g__texto 
+      position: relative
+      width: 100%
+      background-color: rgba(255, 255, 255, 0.95)
+      right: 0%
+
+.img-infografica-b__item
+    position: absolute
+    cursor: pointer
+    transform: translate(-50%, -50%)
+    width: 4.5%
+
+.img-infografica-b__modal
+    background-color: #808080
+    border-radius: 20px
+
+
+.titulo-sintesis
+    border-left-color: #ff8f00
