--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -18,7 +18,8 @@
     top: 10%
     right: 16%
 
-
+.banner-principal__img
+  width: 400px !important    
 
 @keyframes float1
   0%
@@ -155,9 +156,6 @@
     width: 370px
     height: 220px
 
-.trj-numerada
-  width: 260px
-  height: 315px
 
 /////////pestañas verticales
 
@@ -351,3 +349,7 @@
 
 .titulo-sintesis
     border-left-color: #ff8f00
+
+.bg
+  background-color: #EDF8F9
+  border-radius: 20px    
